--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,4 +37,5 @@
 @import "blocks/main-filter.scss";
 @import "blocks/companions-filter.scss";
 @import "blocks/travel-modes.scss";
+@import "blocks/level-filter.scss";
 
