--- a/source/sass/blocks/travel-modes.scss
+++ b/source/sass/blocks/travel-modes.scss
@@ -8,8 +8,13 @@
     margin: 0 0 0 1px;
     padding: 5px 0 19px;
 
+    @media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
+      display: flex;
+      margin: 0 -5px 0;
+      padding: 0;
+    }
+
     .travel-modes__checkbox:focus ~ .travel-modes__round {
-      z-index: 10;
       box-shadow: 0 2px 10px 0 fade_out(#000000, 1 - 0.38);
     }
 
@@ -32,7 +37,6 @@
       }
 
       &:hover .travel-modes__round {
-        z-index: 10;
         box-shadow: 0 2px 10px 0 fade_out(#000000, 1 - 0.08);
       }
 
@@ -42,21 +46,19 @@
       }
 
       &:hover .travel-modes__img {
-        z-index: 11;
-        fill: fade-out(#000000, 1 - 0.3);
+        color: fade-out(#000000, 1 - 0.3);
       }
 
       &:active .travel-modes__img {
-        z-index: 11;
-        fill: fade-out(#000000, 1 - 0.1);
+        color: fade-out(#000000, 1 - 0.1);
       }
 
       &:hover .travel-modes__checkbox:checked ~ .travel-modes__img {
-        fill: #101e44;
+        color: #101e44;
       }
 
       &:active .travel-modes__checkbox:checked ~ .travel-modes__img {
-        fill: fade_out(#101e44, 1 - 0.3);
+        color: fade_out(#101e44, 1 - 0.3);
       }
     }
 
@@ -73,7 +75,6 @@
 
     .travel-modes__img {
       position: absolute;
-      z-index: 11;
       margin: 0;
       transition: 0.3s;
 
@@ -145,12 +146,12 @@
 }
 
 .travel-modes__checkbox:checked ~ .travel-modes__img {
-  fill: #1d2e5b;
+  color: #1d2e5b;
 }
 
 .travel-modes__img {
   display: block;
-  fill: fade-out(#000000, 1 - 0.15);
+  color: fade-out(#000000, 1 - 0.15);
 
   &--plane {
     width: 19px;
@@ -196,7 +197,6 @@
   clip: auto;
   overflow: visible;
   position: absolute;
-  z-index: 1;
   left: 50%;
   bottom: -72px;
   transform: translateX(-50%);
