--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,4 +38,6 @@
 @import "blocks/companions-filter.scss";
 @import "blocks/travel-modes.scss";
 @import "blocks/level-filter.scss";
+@import "blocks/user-card.scss";
+@import "blocks/route.scss";
 
