--- a/source/sass/blocks/route.scss
+++ b/source/sass/blocks/route.scss
@@ -12,7 +12,6 @@
 
   &--sri-lanka {
     background-image: url("../img/flag-sri-lanka.svg");
-
   }
 
   &--thailand {
@@ -29,6 +28,26 @@
 
   &--czech {
     background-image: url("../img/flag-czech.svg");
+  }
+
+  &--usa {
+    background-image: url("../img/flag-usa.svg");
+  }
+
+  &--dominican {
+    background-image: url("../img/flag-dominica.svg");
+  }
+
+  &--australia {
+    background-image: url("../img/flag-australia.svg");
+  }
+
+  &--britain {
+    background-image: url("../img/flag-united-kingdom.svg");
+  }
+
+  &--germany {
+    background-image: url("../img/flag-germany.svg");
   }
 
 }
