--- a/source/sass/blocks/user-level.scss
+++ b/source/sass/blocks/user-level.scss
@@ -13,6 +13,15 @@
   line-height: 24px;
   text-align: center;
   color: #ffffff;
+
+  &--catalog {
+    padding-top: 5px;
+    width: 45px;
+    height: 45px;
+    font-weight: 700;
+    background-color: transparent;
+    color: #1d2e5b;
+  }
 }
 
 .user-level__text {
@@ -20,6 +29,11 @@
   display: block;
   font-size: 14px;
   line-height: 14px;
+
+  &--catalog {
+    font-weight: 700;
+
+  }
 
   &::before {
     content: "";
