--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -40,4 +40,5 @@
 @import "blocks/level-filter.scss";
 @import "blocks/user-card.scss";
 @import "blocks/route.scss";
+@import "blocks/companions-filtered.scss";
 
