--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -106,7 +106,7 @@
 
   &--catalog {
     margin: 0 auto;
-    width: 230px;;
+    width: 230px;
     text-align: center;
     padding: 13px 20px 9px;
     font-size: 17px;
@@ -114,5 +114,13 @@
     border-radius: 25px;
     text-transform: uppercase;
     background-color: #ffd74b;
+
+    @media (min-width: $tablet-width) {
+      width: 150px;
+      margin-left: 254px;
+      padding: 18px 20px 12px;
+      font-size: 20px;
+      line-height: 20px;
+    }
   }
 }
