--- a/source/sass/blocks/main-filter.scss
+++ b/source/sass/blocks/main-filter.scss
@@ -7,7 +7,7 @@
   background-color: #ffd74b;
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1){
-    margin: 0;
+    margin: 0 0 40px;
     padding: 34px 35px 37px;
   }
 
