--- a/source/sass/blocks/transport.scss
+++ b/source/sass/blocks/transport.scss
@@ -11,11 +11,15 @@
     justify-content: flex-start;
 
     .transport__item {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      background-color: #edeff6;
       opacity: 1;
+
+      @media (max-width: $tablet-width - 1) {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        background-color: #edeff6;
+        opacity: 1;
+      }
 
       &--active {
         .transport__icon {
@@ -23,14 +27,26 @@
         }
       }
     }
+    
 
     .transport__icon {
       margin-top: 8px;
       opacity: 0.15;
 
+      @media (min-width: $tablet-width) {
+        margin-top: 5px;
+
+        height: 20px;
+        width: 20px;
+      }
+
+
+
+
       &--active {
         opacity: 1;
       }
+
     }
   }
 }
@@ -49,4 +65,3 @@
     opacity: 1;
   }
 }
-
