--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -122,5 +122,9 @@
       font-size: 20px;
       line-height: 20px;
     }
+
+    @media (min-width: $desktop-width) {
+      margin-left: 339px;
+    }
   }
 }
