--- a/source/sass/blocks/companions-filter.scss
+++ b/source/sass/blocks/companions-filter.scss
@@ -8,5 +8,12 @@
   @media (min-width: $desktop-width) {
     padding-top: 32px;
   }
+}
 
+.companions-filter .container {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
 }
