--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -41,4 +41,5 @@
 @import "blocks/user-card.scss";
 @import "blocks/route.scss";
 @import "blocks/companions-filtered.scss";
+@import "blocks/pagination.scss";
 
