--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -42,4 +42,5 @@
 @import "blocks/route.scss";
 @import "blocks/companions-filtered.scss";
 @import "blocks/pagination.scss";
+@import "blocks/control-arrow.scss";
 
