--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -15,30 +15,19 @@
 
 .pagination__item {
   position: relative;
-  width: 50px;
-  height: 50px;
-  background-color: #ffd74b;
   text-align: center;
 
-
-
-  &--active {
-    // &:before {
-    //   position: absolute;
-    //   content: "";
-    //   width: 50px;
-    //   height: 50px;
-    //   top: -5px;
-    //   left: -10px;
-    
-    //   border-radius: 50%;
-    //   background-color: #ffd74b;
-    // }
-    
+  &--current {
+    border-radius: 50%;
+    background-color: #ffd74b;
   }
 }
 
 .pagination__link {
+  display: block;
+  padding-top: 17px;
   color: #1d2e5b;
+  width: 50px;
+  height: 50px;
 }
 
