--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -123,6 +123,7 @@
     width: 154px;
     font-size: 20px;
     line-height: 20px;
+    border: none;
   }
 
   @media (min-width: $desktop-width) {
