--- a/source/sass/blocks/filter-country.scss
+++ b/source/sass/blocks/filter-country.scss
@@ -123,6 +123,15 @@
   @media (min-width: $desktop-width) {
     margin-left: auto;
   }
+
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .filter-country--closed .filter-country__toggle {
