--- a/source/sass/blocks/user-card.scss
+++ b/source/sass/blocks/user-card.scss
@@ -89,6 +89,15 @@
       }
     }
   }
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .user-card__image {
